2003-12-08  Werner Koch  <wk@gnupg.org>

	* TODO: Removed.

2003-11-12  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (process_request): Kludge to print better error
	messages for gpg-error enabled programs.

2003-11-06  Werner Koch  <wk@gnupg.org>

	* assuan.h (assuan_context_t): New.  Should be used in favor of
	ASSUAN_CONTEXT.
	(assuan_error_t): New. To be used instead of AssuanError.

2003-11-11  Moritz Schulte  <mo@g10code.com>

	* assuan-socket-connect.c (assuan_socket_connect): Fix computation
	of socket address length.

2003-08-13  Werner Koch  <wk@gnupg.org>

	* assuan-inquire.c (assuan_inquire): Increase length of cmdbuf to
	the Assuan limit.

2003-06-24  Werner Koch  <wk@gnupg.org>

	* mkerrors: Kludge to print libgpg-error values in an easier
	readable way.

2003-04-29  Werner Koch  <wk@gnupg.org>

	* libassuan.m4: New. Based on libgrypt.m4.
	* Makefile.am (m4data_DATA): New.

	* assuan.h (AssuanCommand): Removed.

	* assuan-handler.c: Remove the cmd_id element,
	(assuan_register_command): Likewise.  Note that semantics changed.
	(_assuan_register_std_commands): Adjusted.

2003-02-22  Neal H. Walfield  <neal@g10code.de>

	* Makefile.am (bin_SCRIPTS): Renamed from bin_PROGRAMS.

2003-02-18  Neal H. Walfield  <neal@g10code.de>

	* Makefile.am (libassuan_a_LIBADD): New variable.
	* funopen.c: Move from ../common.
	* isascii.c: Likewise.
	* memrchr.c: Likewise.
	* putc_unlocked.c: Likewise.
	
2003-02-18  Neal H. Walfield  <neal@g10code.de>

	* assuan-handler.c (_IO_cookie_io_functions_t): Remove.
	(cookie_io_functions_t): Remove.
	(fopencookie): Remove prototype.
	(assuan_get_data_fp): Use funopen, not fopencookie.

2003-02-18  Neal H. Walfield  <neal@g10code.de>

	* libassuan-config.in: New file.
	* Makefile.am (bin_PROGRAMS): New variable.

2003-02-17  Neal H. Walfield  <neal@g10code.de>

	* .cvsignore: New file.

2003-02-17  Neal H. Walfield  <neal@g10code.de>

	* Makefile.am (lib_LIBRARIES): Use this instead of . . .
	(noinst_LIBRARIES): . . . this.